--- a/ref.bib
+++ b/ref.bib
@@ -266,3 +266,78 @@ MRREVIEWER = {J. F. Adams},
 
 
 
+@article{Hsin:2020nts,
+    author = "Hsin, Po-Shen and Lam, Ho Tat",
+    title = "{Discrete Theta Angles, Symmetries and Anomalies}",
+    eprint = "2007.05915",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.21468/SciPostPhys.10.2.032",
+    journal = "SciPost Phys.",
+    volume = "10",
+    pages = "032",
+    year = "2021"
+}
+
+
+
+@article{Ang:2019txy,
+    author = "Ang, J.P. and Roumpedakis, Konstantinos and Seifnashri, Sahand",
+    title = "{Line Operators of Gauge Theories on Non-Spin Manifolds}",
+    eprint = "1911.00589",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "YITP-SB-19-39",
+    doi = "10.1007/JHEP04(2020)087",
+    journal = "JHEP",
+    volume = "04",
+    pages = "087",
+    year = "2020"
+}
+
+
+
+@article{Benini:2018reh,
+    author = "Benini, Francesco and C\'ordova, Clay and Hsin, Po-Shen",
+    title = "{On 2-Group Global Symmetries and their Anomalies}",
+    eprint = "1803.09336",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "SISSA 10/2018/FISI, SISSA-10-2018-FISI",
+    doi = "10.1007/JHEP03(2019)118",
+    journal = "JHEP",
+    volume = "03",
+    pages = "118",
+    year = "2019"
+}
+
+
+
+@article{Cordova:2018cvg,
+    author = "C\'ordova, Clay and Dumitrescu, Thomas T. and Intriligator, Kenneth",
+    title = "{Exploring 2-Group Global Symmetries}",
+    eprint = "1802.04790",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP02(2019)184",
+    journal = "JHEP",
+    volume = "02",
+    pages = "184",
+    year = "2019"
+}
+
+
+
+@article{tHooft:1979rtg,
+    author = "'t Hooft, Gerard",
+    title = "{A Property of Electric and Magnetic Flux in Nonabelian Gauge Theories}",
+    reportNumber = "PRINT-79-0117 (UTRECHT)",
+    doi = "10.1016/0550-3213(79)90595-9",
+    journal = "Nucl. Phys. B",
+    volume = "153",
+    pages = "141--160",
+    year = "1979"
+}
+
+
+
