lines in spin theory

--- a/paper.tex
+++ b/paper.tex
@@ -251,7 +251,52 @@ It is satisfying to see that the duality action correctly preserves the labels `
 
 The rest of the paper is organized as follows ...
 
-\section{Charges of line operators in $\so$ QCD}
+\section{2-group structure}
+Let us first study whether the $\bZ_2$ 1-form symmetry and the $\SU(2n_f)/\bZ_2$ flavor symmetry form a nontrivial 2-group or not. 
+This can be found rather physically by studying the line operators. 
+
+\subsection{$\Spin$}
+We start by discussing the $\Spin(2n_c)$ gauge theories. 
+We first recall that the center of $\Spin(2n_c)$ is $\bZ_2\times \bZ_2$ when $n_c$ is even and $\bZ_4$ when $n_c$ is odd.
+This corresponds to the fact that the tensor square of a spinor representation contains the identity representation when $n_c$ is even while it contains the vector representation when $n_c$ is odd.
+
+We now consider the Wilson line $W$ in the spinor representation in the $\Spin(2n_c)$ gauge theory with $2n_f$ fermions in the vector representation.
+When $n_c$ is even, $W^2$ contains the identity representation, and therefore we simply have a $\bZ_2$ 1-form symmetry independent of the $\su$ flavor symmetry, and there is nothing to see here.
+
+When $n_c$ is odd, $W^2$ contains the vector representation.
+This can be screened by the dynamical fermion, which however carries the fundamental representation of $\su(2n_f)$ flavor symmetry, 
+and in particular transforms nontrivially under $-1\in \SU(2n_f)$.
+In other words, the flavor Wilson line in the vector representation of $\SU(2n_f)$ can now be considered as the square  of the gauge Wilson line in the spinor representation of $\Spin(2n_c)$.
+This means that we have the following extension of groups \begin{equation}
+0\to \underbrace{\bZ_2}_{\substack{\text{subgroup of}\\
+\text{rep.~of center of $\SU(2n_f)$}}}
+\to \bZ_4 
+\to \underbrace{\bZ_2}_{\substack{\text{group of gauge Wilson lines }\\
+\text{up to screening}}} \to 0.
+\end{equation}
+
+As the groups of charges of $\su(2n_f)$ 0-form symmetry and $\bZ_2$ 1-form symmetry are combined nontrivially, 
+the 0-form symmetry group and the 1-form symmetry group are also combined nontrivially.
+This can be seen most clearly by considering background fields for the symmetry groups.
+
+The fermion fields are in the vector of $\SO(2n_c)$ and in the fundamental of $\SU(2n_f)$, and therefore is a representation of $G=[\SO(2n_c)\times \SU(2n_f)]/\bZ_2$.
+Given a $G$-bundle on a manifold $X$,
+there is an $\SO(2n_c)/\bZ_2$ bundle and an $\SU(2n_f)/\bZ_2$ bundle associated to it.
+Let us denote by $a_2,v_2\in H^2(X,\bZ_2)$ the obstruction classes controlling whether they lift to $\SO(2n_c)$ and $\SU(2n_f)$ respectively. 
+Then we have $a_2=v_2$ for a $G$-bundle.
+The flavor Wilson line in the fundamental representation is charged under $-1\in \SU(2n_f)$ in the center,
+and $v_2$ can be considered as the background field for this $\bZ_2$ 1-form center symmetry.
+
+Now, without the flavor background,  the background $E\in H^2(X,\bZ_2)$ for the electric $\bZ_2$ one-form symmetry of the $\Spin(2n_c)$ theory sets the Stiefel-Whitney class $w_2\in H^2(X,\bZ_2)$ of the $\SO(2n_c)$ gauge bundle to be $E=w_2$, which controls whether it lifts to a $\Spin(2n_c)$ bundle.
+When the flavor background $v_2$ is nontrivial,
+the obstruction class $a_2$ controlling the lift from $\SO(2n_c)/\bZ_2$ to $\SO(2n_c)$ is nontrivial.
+In this situation when $n_c$ is odd, $w_2$ can no longer be defined as a closed cochain; rather it satisfies $\delta w_2 = \beta a_2$, where $\beta$ is the Bockstein operation.
+As $E=w_2$ and $a_2=v_2$, we conclude that the background fields satisfy \begin{equation}
+\delta E=\beta v_2.
+\end{equation}
+This means that the $\bZ_2$ 1-form symmetry and the $\SU(2n_f)/\bZ_2$ 0-form flavor symmetry form the 2-group $H$ fitting in the sequence \begin{equation}
+0\to \bZ_2[1]\to H \to \SU(2n_f)/\bZ_2 \to 0
+\end{equation} whose Postnikov class is $\beta v_2 \in H^3(B\SU(2n_f)/\bZ_2,\bZ_2)$.
 
 
 
